@@ -8,8 +8,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import javax.swing.Icon;
+import javax.swing.ImageIcon;
+import javax.swing.JButton;
+
 import juno.exception.FileAlreadyExistsException;
 import juno.exception.FileNotFoundException;
+import juno.main.init.Paths;
 import juno.model.card.Action;
 import juno.model.card.Card;
 import juno.model.card.Color;
@@ -23,15 +28,13 @@ import juno.model.util.PathGenerator;
 public class GCard {
 	
 	/* Card name = Pathh */
-	private Map<String, String[]> cards;
+	private Map<Card, JButton> cards;
 	
 	/* The instance */
 	private static GCard instance;
 
 	/* Singleton Pattern */
-	private GCard() throws FileNotFoundException, FileAlreadyExistsException {
-		init();
-	}
+	private GCard() {}
 
 	
 	/**
@@ -40,7 +43,7 @@ public class GCard {
 	 * @throws FileAlreadyExistsException 
 	 * @throws FileNotFoundException 
 	 */
-	public static GCard getInstance() throws FileNotFoundException, FileAlreadyExistsException {
+	public static GCard getInstance() {
 		if(instance == null) {
 			instance = new GCard();
 		} return instance;
@@ -48,79 +51,51 @@ public class GCard {
 	
 	
 	/**
-	 * 
-	 * @param card The card
-	 * @return The path of the card
-	 * @throws FileNotFoundException If there are a missing path
+	 * Returns the JButton associated with the
+	 * specified Card object
+	 * @param card A Card object
+	 * @return A JButton object
 	 */
-	public String getGraphicCardOf(Card card) throws FileNotFoundException {
-		
-		/* Card specifications */
-		Action action = card.getAction();
-		Color color = card.getColor();
-		int value = card.getValue();
-		
-		/* File separator */
-		String div = System.getProperty("file.separator");
-		
-		String[] paths;
-
-		// Colored card case
-		if(color != null) {
-			paths = cards.get(color.name().toLowerCase());
-		} else {
-			paths = cards.get("jolly");
-		} 
-		for(String path : paths){
-			String[] names = path.split(div);
-			String name = names[names.length -1].split(".")[0];
-			if(color == null && name.equals(action.name())) {
-				return path;
-			} else if(color != null 
-					&& value == -1 
-					&& action.name()
-					.toLowerCase()
-					.equals(name)) {
-				return path;
-			} else if (color != null 
-					&& value != -1
-					&& (value + "")
-					.equals(name)) {
-				return path;
-			}
-		} throw new FileNotFoundException("");
+	public JButton getGraphicCard(Card card) {
+		return this.cards.get(card);
 	}
+
 	
-	private void init() throws FileNotFoundException, FileAlreadyExistsException {
-		String[] fileNames = {"data", "images", "cards"};
-		File main = new File(PathGenerator.generate(fileNames));
-		if(!main.exists()) {
-			throw new FileNotFoundException(main.getPath());
-		} else if(!main.isDirectory()) {
-			throw new FileAlreadyExistsException(main.getPath());
-		} 
-
-		cards = new HashMap<>();
-
-		List<String> names = List.of("red", "blue", "green", "yellow", "jolly");
-		for(String name : main.list()) {
-			if(names.contains(name)) {
-				File path = new File(PathGenerator.generate(main.getPath(), name));
-				for(String fileName : path.list()) {
+	/* Initialize the GCard instance */
+	public void init() {
+		Paths[] cardsDirectories = {Paths.RCARDS, Paths.BCARDS,
+				Paths.YCARDS, Paths.GCARDS, Paths.JCARDS};
+		List<Color> colors = Arrays.asList(Color.values());
+		for(Paths pathObject : cardsDirectories) {
+			String path = pathObject.getPath();
+			File cardDir = new File(path); 
+			String dirName = cardDir.getName();
+			Color color = Color.getColorObject(dirName);
+			for(String fileName : cardDir.list()) {
+				String absoluteName = fileName.split(".")[0];
+				int value = -1;
+				Action action = Action.getActionObject(fileName);
+				char firstChar = absoluteName.charAt(0);
+				if(Character.isDigit(firstChar)) {
+					value = firstChar - '0';
 				}
-			} else {
-				throw new FileNotFoundException(name + " not found");
+				Card card = new Card(value, color, action);
+				String cardPath = PathGenerator.generate(path, fileName);
+				JButton button = new JButton(new ImageIcon(cardPath));
+				cards.put(card, button);
 			}
-		} 
-	}
-	
-	public static void main(String[] args) {
-		try {
-			GCard.getInstance();
-		} catch (FileNotFoundException | FileAlreadyExistsException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+			
+			colors.remove(0);
 		}
 	}
 
+	
+	/* Generates the JButton with the specified
+	 * image path.
+	 */
+	private JButton generateJButton(String path) {
+		Icon icon = new ImageIcon(path);
+		JButton button = new JButton(icon);
+		return button;
+	}
 }
